--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 		} 
 		else 
 		{
-			window.location.href = "http://www.topster.de/xa/alter-erraten/"
+			window.location.href = "http://www.topster.de/xa/alter-erraten/";
 		}
 		</script>
     </body>
